baml_language/crates/baml_tests/snapshots/compiles/json_map_literal/baml_tests__compiles__json_map_literal__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.NestedMapLiteral() -> baml.json.json  [expr] {
  {  } map { "a": 1, "b": [2, 3], "c": map { "nested": null } }
}
