baml_language/crates/baml_tests/snapshots/compiles/json_map_literal/baml_tests__compiles__json_map_literal__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.NestedMapLiteral() -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: int[]
    let _2: map<string, null>

    bb0: {
        _1 = [const 2_i64, const 3_i64]: int[];
        _2 = { const "nested": const null }: map<string, null>;
        _0 = { const "a": const 1_i64, const "b": copy _1, const "c": copy _2 }: map<string, int | int[] | map<string, null>>;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
