baml_language/crates/baml_tests/snapshots/compiles/json_map_literal/baml_tests__compiles__json_map_literal__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 14691
---
=== TIR2 ===
function user.NestedMapLiteral() -> baml.json.json throws never {
  { : map<string, baml.json.json>
    map { "a": 1, "b": [2, 3], "c": map { "nested": null } } : map<string, baml.json.json>
  }
}
