baml_language/crates/baml_tests/snapshots/compiles/json_map_literal/baml_tests__compiles__json_map_literal__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function reflect.call_any(f: baml.AnyFunction<Returns = R, Throws = E>, args: unknown[], opts: map<string, unknown>) -> R {
}

function reflect.signature(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> reflect.Signature {
}

function user.NestedMapLiteral() -> baml.json.json {
    load_const 1
    load_const 2
    load_const 3
    load_type baml.json.json
    alloc_array 2
    load_const null
    load_const "nested"
    load_type string
    load_type baml.json.json
    alloc_map 1
    load_const "a"
    load_const "b"
    load_const "c"
    load_type string
    load_type baml.json.json
    alloc_map 3
    return
}
